style: corrected spacing header css file

--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -1,42 +1,42 @@
-header{
-  width: 100vw;
+header {
+  width: 100%;
   height: 9.3rem;
-  background-color: #FFFFFF;
+  background-color: #ffffff;
 
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  
+
   padding: 0rem 6.7rem;
+  box-shadow: black 0px;
 }
 
-header > #logo{
+header > #logo {
   display: flex;
   flex-direction: row;
   align-items: center;
 }
 
-header > #logo > #logo-img{
+header > #logo > #logo-img {
   width: 4.8rem;
   height: 5.7rem;
   margin-right: -0.6rem;
 }
 
-header > #logo > #logo-text{
+header > #logo > #logo-text {
   font-size: 2.4rem;
   font-style: italic;
   font-weight: 600;
   line-height: 83%;
 }
 
-header > #logo > #logo-text span{
+header > #logo > #logo-text span {
   display: inline-block;
   text-indent: 1.55rem;
 }
 
-
-header > #menu-itens{
+header > #menu-itens {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -44,10 +44,9 @@ header > #menu-itens{
   gap: 5rem;
 }
 
-header > #menu-itens > nav > ul{
-  display: flex;  
+header > #menu-itens > nav > ul {
+  display: flex;
   gap: 3.7rem;
-
 }
 
 header > #menu-itens > nav > ul > li {
@@ -56,13 +55,12 @@ header > #menu-itens > nav > ul > li {
   list-style: none;
 }
 
-
-header > #menu-itens > #menu-itens-icons{
+header > #menu-itens > #menu-itens-icons {
   display: flex;
   gap: 1.9rem;
 }
 
-header > #menu-itens > nav > ul > #item > a{
+header > #menu-itens > nav > ul > #item > a {
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -70,18 +68,17 @@ header > #menu-itens > nav > ul > #item > a{
   gap: 0.7rem;
 }
 
-header > #menu-itens > #join-button{
+header > #menu-itens > #join-button {
   width: 13.1rem;
   height: 3.3rem;
-  background-color: #89D3D1;
+  background-color: #89d3d1;
   border-radius: 7.1rem;
-  
+
   display: flex;
   justify-content: center;
   align-items: center;
 
-
-  color: #FFFFFF;
+  color: #ffffff;
   font-size: 1.6rem;
   font-weight: 500;
   text-decoration: none;
@@ -89,6 +86,6 @@ header > #menu-itens > #join-button{
   transition: background-color 0.3s ease;
 }
 
-header > #menu-itens > #join-button:hover{
+header > #menu-itens > #join-button:hover {
   background-color: #659b99;
 }
